kubernetes/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
spec:
  selector:
    matchLabels:
      component: go
  template:
    metadata:
      labels:
        component: go
    spec:
      containers:
        - name: go
          image: ramdaggumati11/devopstask:latest
          stdin: true
          ports:
            - containerPort: 8080
