kubernetes/go-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-cluster-service
spec:
  type: ClusterIP
  selector:
    component: go
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
