kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /ping:id
            pathType: Prefix
            backend:
              service:
                name: go-cluster-service
                port:
                  number: 8080
